--- a/style.css
+++ b/style.css
@@ -127,3 +127,21 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
+
+/*//////////////////////////////////////////////*/
+/* Base Styles */
+/*//////////////////////////////////////////////*/
+.grid {
+  display: grid;
+}
+
+.flex {
+  display: flex;
+}
+
+body {
+  grid-template-columns: minmax(300px, auto) 1fr;
+  grid-template-areas: "aside main";
+  gap: 10px;
+  font-family: "Roboto", sans-serif;
+}
