--- a/style.css
+++ b/style.css
@@ -228,6 +228,8 @@ header {
   padding: 25px 50px;
   font-size: 1.5rem;
   gap: 25px;
+  -webkit-box-shadow: 0px 0px 15px -9px #000000;
+  box-shadow: 0px 0px 15px -9px #000000;
 }
 
 .top {
@@ -274,4 +276,49 @@ header {
   height: 2.5em;
   width: 2.5em;
   border-radius: 50%;
+}
+
+.bottom {
+  grid-template-columns: 1fr auto;
+  grid-area: bottom;
+  gap: 50px;
+  align-items: center;
+}
+
+.bottom .user {
+  grid-template-columns: auto 1fr;
+  grid-template-rows: repeat(2, auto);
+  align-items: center;
+  column-gap: 25px;
+}
+
+.bottom .user .profile-img {
+  grid-column: 1 / 2;
+  grid-row: 1 / 3;
+}
+
+.bottom .welcome {
+  font-size: 0.8rem;
+  font-weight: 600;
+  align-self: end;
+}
+
+.bottom .username {
+  font-size: 1.5rem;
+  font-weight: 600;
+}
+
+.quick-actions {
+  grid-template-columns: repeat(3, 1fr);
+  gap: 25px;
+}
+
+.quick-action {
+  border-radius: 25px;
+  background-color: #15803d;
+  padding: 10px 20px;
+  text-align: center;
+  font-size: 1.2rem;
+  font-weight: 600;
+  color: #f0fdf4;
 }
