--- a/style.css
+++ b/style.css
@@ -214,7 +214,9 @@ main {
   height: 100vh;
 }
 
+/*//////////////////////////////////////////////*/
 /* Header */
+/*//////////////////////////////////////////////*/
 header {
   grid-template-areas:
     "top"
@@ -225,6 +227,8 @@ header {
   gap: 10px;
   -webkit-box-shadow: 0px 0px 15px -9px #000000;
   box-shadow: 0px 0px 15px -9px #000000;
+  position: relative;
+  z-index: 2;
 }
 
 .top {
@@ -313,13 +317,23 @@ header {
 .quick-action {
   border-radius: 25px;
   background-color: #15803d;
-  padding: 15px 25px;
+  padding: 10px 25px;
   text-align: center;
   font-size: 1.2rem;
   font-weight: 600;
   color: #f0fdf4;
 }
 
-main .content {
+/*//////////////////////////////////////////////*/
+/* Content */
+/*//////////////////////////////////////////////*/
+.content {
+  grid-template-columns: 3fr 1fr;
+  grid-template-areas:
+    "projects announcements"
+    "projects trending";
   overflow: scroll;
+  padding: 35px 25px;
+  background-color: #bbf7d0;
+  gap: 25px;
 }
