--- a/style.css
+++ b/style.css
@@ -337,3 +337,53 @@ header {
   background-color: #bbf7d0;
   gap: 25px;
 }
+
+.projects {
+  grid-area: projects;
+  grid-template-rows: auto 1fr;
+  gap: 25px;
+}
+
+.projects-title {
+  font-size: 1.2rem;
+  font-weight: 500;
+}
+
+.projects .container {
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-auto-rows: min-content;
+  gap: 25px;
+}
+
+.project {
+  background-color: #f0fdf4;
+  padding: 20px;
+  border-radius: 10px;
+  font-size: 1.2rem;
+  border-left: 10px solid #22c55e;
+  -webkit-box-shadow: 0px 2px 15px -9px #000000;
+  box-shadow: 0px 2px 15px -9px #000000;
+  gap: 15px;
+}
+
+.project .title {
+  font-weight: 500;
+}
+
+.project .description {
+  font-size: 0.9rem;
+  font-weight: 400;
+  color: #3d4451;
+}
+
+.project .actions {
+  gap: 25px;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+.project .actions .action {
+  height: 1rem;
+  width: 1rem;
+  cursor: pointer;
+}
