--- a/style.css
+++ b/style.css
@@ -388,3 +388,44 @@ header {
   width: 1rem;
   cursor: pointer;
 }
+
+.announcements {
+  grid-area: announcements;
+  gap: 25px;
+}
+
+.announcements .title {
+  font-weight: 500;
+  font-size: 1.4rem;
+}
+
+.announcements .container {
+  background-color: #f0fdf4;
+  border-radius: 10px;
+  padding: 20px;
+  -webkit-box-shadow: 0px 2px 15px -9px #000000;
+  box-shadow: 0px 2px 15px -9px #000000;
+  gap: 25px;
+}
+
+.announcement {
+  grid-auto-rows: min-content;
+  gap: 15px;
+}
+
+.announcement .title {
+  font-size: 1.2rem;
+  font-weight: 500;
+}
+
+.announcement .description {
+  font-size: 1rem;
+  font-weight: 400;
+  color: #3d4451;
+}
+
+.announcement:nth-child(2) {
+  border-top: 1px solid #3d445133;
+  border-bottom: 1px solid #3d445133;
+  padding: 25px 0px;
+}
