--- a/style.css
+++ b/style.css
@@ -429,3 +429,55 @@ header {
   border-bottom: 1px solid #3d445133;
   padding: 25px 0px;
 }
+
+.trending {
+  grid-area: trending;
+  gap: 25px;
+}
+
+.trending .title {
+  font-size: 1.4rem;
+  font-weight: 500;
+}
+
+.trending .container {
+  background-color: #f0fdf4;
+  border-radius: 10px;
+  padding: 20px;
+  -webkit-box-shadow: 0px 2px 15px -9px #000000;
+  box-shadow: 0px 2px 15px -9px #000000;
+  gap: 25px;
+}
+
+.trend {
+  grid-template-columns: min-content 1fr;
+  grid-auto-rows: min-content;
+  grid-template-areas:
+    "profile-img handle"
+    "profile-img description";
+  gap: 5px 15px;
+}
+
+.trend .profile-img {
+  grid-area: profile-img;
+  height: 4em;
+  width: 4em;
+  border-radius: 50%;
+  align-items: center;
+  justify-content: center;
+}
+
+.trend .handle {
+  grid-area: handle;
+  font-size: 1.2rem;
+  font-weight: 500;
+  align-self: end;
+}
+
+.trend .description {
+  grid-area: description;
+  font-size: 1rem;
+  font-weight: 400;
+  color: #3d4451;
+  align-self: start;
+}
