--- a/style.css
+++ b/style.css
@@ -258,7 +258,7 @@ header {
   flex: 1;
   max-width: 800px;
   min-height: 30px;
-  border: none;
+  border: 1px solid #22c55e;
   background-color: #bbf7d0;
   border-radius: 20px;
   padding-left: 10px;
